test/files/neg/t3909.check
t3909.scala:1: error: in object DO, multiple overloaded alternatives of method m1 define default arguments.
object DO {
       ^
1 error
